clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_8.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-8.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %38 = alloca s32i, "n", align 4
        %39 = alloca rec_tiny, "x", align 1
        %40 = alloca s32i, "i", align 4
        %41 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %38
        %42 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
        va_start %42
        scope {
            %51 = const 0 : s32i
            store %51, %40, align 4
            for cond: {
                %65 = load %40 : s32i, align 4
                %66 = load %38 : s32i, align 4
                %67 = cmp lt %65, %66 : bool
                condition %67
            } step: {
                %52 = load %40 : s32i, align 4
                %53 = inc %52 : s32i [nsw]
                store %53, %40, align 4
                yield
            } do {
                scope {
                    %54 = alloca rec_tiny, "vaarg.tmp", align 1
                    %55 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
                    %56 = va_arg %55 : rec_tiny
                    store %56, %54, align 1
                    copy %39, %54
                    scope {
                        %57 = get_member %39[0] "c" : s8i*
                        %58 = load %57 : s8i, align 1
                        %59 = cast(integral) %58 : s32i
                        %60 = load %40 : s32i, align 4
                        %61 = const 10 : s32i
                        %62 = add %60, %61 : s32i [nsw]
                        %63 = cmp ne %59, %62 : bool
                        if %63 {
                            %64 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %44 = alloca s64i, "x", align 8
            %45 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
            %46 = va_arg %45 : s64i
            store %46, %44, align 8
            scope {
                %47 = load %44 : s64i, align 8
                %48 = const 123 : s64i
                %49 = cmp ne %47, %48 : bool
                if %49 {
                    %50 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        %43 = cast(array_to_ptrdecay) %41 : rec___va_list_tag*
        va_end %43
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 1
    %1 = alloca rec_tiny, "coerce", align 1
    %2 = alloca rec_tiny, "coerce", align 1
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 1
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s8i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s8i*
    store %6, %9, align 1
    %10 = const 11 : s8i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s8i*
    store %10, %13, align 1
    %14 = const 12 : s8i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s8i*
    store %14, %17, align 1
    %18 = const 3 : s32i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = const 1 : s64i
    %22 = get_element %4[%21] : rec_tiny*
    %23 = const 2 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = const 123 : s64i
    %26 = load %20 : rec_tiny, align 1
    %27 = load %22 : rec_tiny, align 1
    %28 = load %24 : rec_tiny, align 1
    store %26, %2
    %29 = cast(bitcast) %2 : s8i*
    %30 = load %29 : s8i
    store %27, %1
    %31 = cast(bitcast) %1 : s8i*
    %32 = load %31 : s8i
    store %28, %0
    %33 = cast(bitcast) %0 : s8i*
    %34 = load %33 : s8i
    call @f(%18, %30, %32, %34, %25) [all]
    %35 = get_global @exit : ((s32i) -> void)*
    %36 = const 0 : s32i
    call @exit(%36) [all]
    %37 = load %3 : s32i
    return %37
}
