clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__941014_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/941014-2.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn a1(%arg0: u64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %53 = alloca u64i, "offset", align 8
        store %arg0, %53
        return
}
fn malloc(%arg0: u64i) -> void* [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn f() -> rec_foo_t* [external, c, no_inline, dso_local, nothrow] {
        %15 = alloca rec_foo_t*, "__retval", align 8
        %16 = alloca rec_foo_t*, "foo_p", align 8
        %17 = get_global @malloc : (u64i) -> void**
        %18 = const 4 : u64i
        %19 = call @malloc(%18) : void* [all]
        %20 = cast(bitcast) %19 : rec_foo_t*
        store %20, %16, align 8
        %21 = load %16 : rec_foo_t*, align 8
        %22 = cast(ptr_to_int) %21 : u64i
        %23 = const 30 : u64i
        sub
        call @a1(%24) [all]
        scope {
                %38 = load %16 : rec_foo_t*, align 8
                get_member
                %40 = load %39 : u16i, align 2
                %41 = cast(integral) %40 : s32i
                %42 = const 61440 : s32i
                and
                %44 = cast(int_to_bool) %43 : bool
                if %44 {
                        %45 = get_global @printf : (s8i*, ...) -> s32i*
                        %46 = get_global @.str : s8i[4]*
                        %47 = cast(array_to_ptrdecay) %46 : s8i*
                        %48 = load %16 : rec_foo_t*, align 8
                        get_member
                        %50 = load %49 : u16i, align 2
                        %51 = cast(integral) %50 : s32i
                        %52 = call @printf(%47, %51) : s32i [all]
                        yield
                }
                yield
        }
        %25 = const 256 : u16i
        %26 = load %16 : rec_foo_t*, align 8
        get_member
        store %25, %27, align 2
        %28 = load %16 : rec_foo_t*, align 8
        %29 = cast(ptr_to_int) %28 : u64i
        %30 = const 2 : u64i
        %31 = add %29, %30 : u64i
        call @a1(%31) [all]
        %32 = load %16 : rec_foo_t*, align 8
        %33 = cast(ptr_to_int) %32 : u64i
        %34 = const 30 : u64i
        sub
        call @a1(%35) [all]
        %36 = load %16 : rec_foo_t*, align 8
        store %36, %15
        %37 = load %15 : rec_foo_t*
        return %37
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_foo_t*, "foo_p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @f : () -> rec_foo_t**
        %4 = call @f() : rec_foo_t* [all]
        store %4, %1, align 8
        scope {
                %8 = load %1 : rec_foo_t*, align 8
                get_member
                %10 = load %9 : u16i, align 2
                %11 = cast(integral) %10 : s32i
                %12 = const 256 : s32i
                cmp
                if %13 {
                        %14 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %5 = get_global @exit : (s32i) -> void*
        %6 = const 0 : s32i
        call @exit(%6) [all]
        %7 = load %0 : s32i
        return %7
}
