clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__950426_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/950426-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s64i, "i", align 8
    %2 = alloca s8i, "ca", align 1
    %3 = const 0 : s32i
    store %3, %0
    %4 = const -2147483647 : s64i
    %5 = const 1 : s64i
    %6 = sub %4, %5 : s64i [nsw]
    store %6, %1, align 8
    %7 = const 1 : s8i
    store %7, %2, align 1
    scope {
        %19 = load %1 : s64i, align 8
        %20 = load %2 : s8i, align 1
        %21 = cast(integral) %20 : s32i
        %22 = shift right %19, %21 : s64i
        %23 = const -1073741824 : s64i
        %24 = cmp ne %22, %23 : bool
        if %24 {
            %25 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %11 = load %1 : s64i, align 8
        %12 = load %1 : s64i, align 8
        %13 = const -2000000000 : s64i
        %14 = div %12, %13 : s64i
        %15 = shift right %11, %14 : s64i
        %16 = const -1073741824 : s64i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %8 = get_global @exit : ((s32i) -> void)*
    %9 = const 0 : s32i
    call @exit(%9) [all]
    %10 = load %0 : s32i
    return %10
}
